Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13050

QPushButton with a style sheet layout error on Mac

XMLWordPrintable

    • macOS
    • 112b8e49c291a2ee6a1d67dccf368e53c9bd19cd

      I made a simple form with three QPushButtons on a horizontal layout with style sheets like this:
      QPushButton {
      border: none;
      background-color: red;
      min-width: 100px;
      min-height: 50px;
      }
      (colors and min-heights are different). The full project is attached. Layout spacing is set to 0.
      On Linux and Windows, it works as intended (see linux.png). But on Mac OS the buttons overlap (see mac.png).

        1. windows-combobox.png
          32 kB
          François-Xavier de Guillebon
        2. mac-combobox.png
          125 kB
          François-Xavier de Guillebon
        3. mac.png
          15 kB
          Dmitry Savenko
        4. linux.png
          13 kB
          Dmitry Savenko
        5. LayoutTest.tar.gz
          1 kB
          Dmitry Savenko
        For Gerrit Dashboard: QTBUG-13050
        # Subject Branch Project Status CR V

            bachewii Jens
            dsavenko Dmitry Savenko
            Votes:
            23 Vote for this issue
            Watchers:
            22 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes